--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Barom"
         android:usesCleartextTraffic="true">
+        <activity android:name=".MapsActivity"></activity>
         <activity android:name=".InfoActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
