--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Barom"
         android:usesCleartextTraffic="true">
-        <activity android:name=".InfoActivity"></activity>
+        <activity android:name=".InfoActivity1"></activity>
+        <activity android:name=".MapsActivity"></activity>
         <activity android:name=".QuestView"></activity>
         <activity android:name=".QuestItem"></activity>
         <activity android:name=".QuestAdd"></activity>
